theme/components/button.module.css
.button {
	font-family: inherit;
	font-size: inherit;
	font-weight: 600;
	line-height: 1;

	cursor: pointer;

	outline: none;
	padding-block: var(--control-padding-block);
	padding-inline: var(--control-padding-inline);

	border-radius: var(--control-radius);
	border-width: var(--control-border);

	transition:
		background-color var(--transition-color),
		color var(--transition-color),
		border-color var(--transition-color);

	&[disabled] {
		cursor: default;
		filter: var(--control-disabled);
	}

	background-color: var(--button-bg);
	color: var(--button-fg);
	border: var(--control-border) solid var(--button-border, var(--button-bg));

	&:hover:not(:active):not([disabled]) {
		background-color: var(--button-active);
		&:not(:focus-visible) {
			border-color: var(--button-active);
		}
	}

	&:focus-visible {
		border-color: var(--button-focus);
	}
}

.default {
	--button-bg: var(--button-default-bg);
	--button-fg: var(--button-default-fg);
	--button-active: var(--button-default-active);
	--button-focus: var(--button-default-focus);
}

.primary {
	--button-bg: var(--button-primary-bg);
	--button-fg: var(--button-primary-fg);
	--button-active: var(--button-primary-active);
	--button-focus: var(--button-primary-focus);
}

.success {
	--button-bg: var(--button-success-bg);
	--button-fg: var(--button-success-fg);
	--button-active: var(--button-success-active);
	--button-focus: var(--button-success-focus);
}

.warning {
	--button-bg: var(--button-warning-bg);
	--button-fg: var(--button-warning-fg);
	--button-active: var(--button-warning-active);
	--button-focus: var(--button-warning-focus);
}

.danger {
	--button-bg: var(--button-danger-bg);
	--button-fg: var(--button-danger-fg);
	--button-active: var(--button-danger-active);
	--button-focus: var(--button-danger-focus);
}

.input {
	--button-bg: var(--button-input-bg);
	--button-fg: var(--button-input-fg);
	--button-active: var(--button-input-active);
	--button-focus: var(--button-input-focus);
	--button-border: var(--button-input-border);
}

.item {
	--button-bg: var(--button-item-bg);
	--button-fg: var(--button-item-fg);
	--button-active: var(--button-item-active);
	--button-focus: var(--button-item-focus);
}

:global(.rvx-dark) {
	--button-default-bg: rgb(72 72 72);
	--button-default-fg: white;
	--button-default-active: rgb(100 100 100);
	--button-default-focus: var(--fg-accent);

	--button-primary-bg: rgb(64 160 255);
	--button-primary-fg: black;
	--button-primary-active: rgb(112 184 255);
	--button-primary-focus: rgb(200 241 255);

	--button-success-bg: rgb(64 255 64);
	--button-success-fg: black;
	--button-success-active: rgb(160 255 160);
	--button-success-focus: rgb(224 255 224);

	--button-warning-bg: rgb(255 200 0);
	--button-warning-fg: black;
	--button-warning-active: rgb(255 224 112);
	--button-warning-focus: rgb(255 243 200);

	--button-danger-bg: rgb(255 40 40);
	--button-danger-fg: white;
	--button-danger-active: rgb(255 100 100);
	--button-danger-focus: rgb(255 200 200);

	--button-input-bg: rgb(36 36 36);
	--button-input-fg: white;
	--button-input-border: rgb(54 54 54);
	--button-input-active: rgb(64 64 64);
	--button-input-focus: var(--fg-accent);

	--button-item-bg: rgb(48 48 48);
	--button-item-fg: white;
	--button-item-active: rgb(64 64 64);
	--button-item-focus: var(--fg-accent);
}

